--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/system": "^5.14.9",
+    "@mui/x-charts": "^6.0.0-alpha.11",
+    "chart.js": "^4.4.0",
+    "d3node-barchart": "^0.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
