--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "chart.js": "^4.4.0",
     "d3node-barchart": "^0.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "uuidv4": "^6.2.13"
-    "react-chartjs-2": "^5.2.0",
-    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
