--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.1",
     "cloudinary-react": "^1.8.1",
     "d3node-barchart": "^0.1.1",
+    "nodemailer": "^6.9.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
