--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/system": "^5.14.9",
     "@mui/x-charts": "^6.0.0-alpha.11",
     "@react-icons/all-files": "^4.1.0",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "cloudinary-react": "^1.8.1",
